<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/home_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:paddingHorizontal="20dp"
        android:layout_height="0dp"
        android:translationZ="10dp"
        android:background="@drawable/home_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="40dp"
            android:layout_marginBottom="10dp"
            android:layout_height="40dp"
            android:src="@drawable/logo"
            android:tint="@color/white"
            android:translationZ="10dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseAppTint"
            android:contentDescription="@string/imageview_content_description" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plusjakartasans_extrabold"
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.3"
            android:layout_marginBottom="25dp"
            android:text="@string/app_description"
            android:textColor="#90FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:letterSpacing="0.01"
            app:iconSize="18dp"
            android:includeFontPadding="false"
            android:layout_marginVertical="16dp"
            android:gravity="center"
            android:textAllCaps="false"
            app:backgroundTint="@color/white"
            android:background="@drawable/rounded"
            app:icon="@drawable/caret_right"
            app:iconGravity="textEnd"
            app:iconPadding="5dp"
            app:iconTint="@color/black"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/login_button_home" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>