<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#eceff4"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topbar_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fee587"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/newclass_destory_self"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:tint="@color/black"
            tools:ignore="UseAppTint"
            android:contentDescription="@string/image_caret_left" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/nekst_bold"
            android:includeFontPadding="false"
            android:text="@string/new_class_title"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/newclass_destory_self"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topbar_parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:layout_marginLeft="15dp"
        android:fontFamily="@font/nekst_bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <EditText
        android:id="@+id/new_class_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints="name"
        android:background="@drawable/rounded"
        android:backgroundTint="#d8dee9"
        android:ems="10"
        android:textColor="@color/black"
        android:layout_marginHorizontal="15dp"
        android:hint="Name for your class"
        android:textColorHint="#4c566a"
        android:includeFontPadding="false"
        android:inputType="text"
        android:padding="18dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nekst_bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:text="@string/newclass_subject_header"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_class_name" />

    <EditText
        android:id="@+id/new_class_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints="name"
        android:background="@drawable/rounded"
        android:backgroundTint="#d8dee9"
        android:ems="10"
        android:textColor="@color/black"
        android:layout_marginHorizontal="15dp"
        android:hint="Subject for your class"
        android:includeFontPadding="false"
        android:inputType="text"
        android:textColorHint="#4c566a"
        android:padding="18dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nekst_bold"
        android:text="Colour"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_class_subject" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="By creating a new class,\nyou agree to our terms and conditions"
        android:textColor="#2E3440"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_select_yellow" />

    <Button
        android:id="@+id/new_class_create"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_yellow"
        android:includeFontPadding="false"
        android:outlineProvider="none"
        android:text="Create class"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <View
        android:id="@+id/color_select_yellow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded"
        android:layout_marginLeft="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <View
        android:id="@+id/color_select_green"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded"
        android:layout_marginLeft="15dp"
        app:layout_constraintStart_toEndOf="@+id/color_select_yellow"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <View
        android:id="@+id/color_select_orange"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded"
        android:layout_marginLeft="15dp"
        app:layout_constraintStart_toEndOf="@+id/color_select_green"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <View
        android:id="@+id/color_select_pink"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded"
        android:layout_marginLeft="15dp"
        app:layout_constraintStart_toEndOf="@+id/color_select_orange"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <!--
    <Button
        android:id="@+id/new_class_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/white"
        android:includeFontPadding="false"
        android:text="@string/newclass_create_btn_title"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/newclass_cancel_self"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:backgroundTint="#00000000"
        android:text="@string/newclass_cancel_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_class_create" /> -->

</androidx.constraintlayout.widget.ConstraintLayout>